# openstudio

./: .env.example  .gitignore  .vercelignore  AGENTS.md  DEPLOYMENT.md  LOOP_TRACKS_PROPOSAL.md  PROPOSAL-USER-ACCOUNT-SYSTEM.md  README.md  ROOM_LAYOUT_REDESIGN.md  SECURITY_AUDIT_MVP.md  SECURITY_AUDIT_REPORT.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.json
.github/: codeflow-card.json
.github/workflows/: native-bridge.yml
docs/: DATABASE.md  ROOM_PERMISSIONS_PROPOSAL.md  native-bridge-audio-validation.md  native-bridge-roadmap.md
docs/proposals/: LYRIA_AUTH_PROXY_PROPOSAL.md  avatar-canvas-editor-proposal.md  avatar-ground-movement-proposal.md  loop-midi-admin-management.md
native-bridge/: AUDIO_PROTOCOL_FIX_PLAN.md  Cargo.toml  README.md
native-bridge/asio-sdk/: README.md
native-bridge/src/: main.rs
native-bridge/src/audio/: device.rs  engine.rs  mod.rs  stream.rs
native-bridge/src/effects/: amp.rs  auto_pan.rs  bitcrusher.rs  cabinet.rs  chain.rs  chorus.rs  compressor.rs  de_esser.rs  delay.rs  distortion.rs  dsp.rs  eq.rs  exciter.rs  flanger.rs  formant_shifter.rs  frequency_shifter.rs  granular_delay.rs  harmonizer.rs  limiter.rs  mod.rs  multi_filter.rs  multiband_compressor.rs  noise_gate.rs  overdrive.rs  phaser.rs  pitch.rs  pitch_correction.rs  reverb.rs  ring_modulator.rs  room_simulator.rs  rotary_speaker.rs  shimmer_reverb.rs  stereo_delay.rs  stereo_imager.rs  transient_shaper.rs  tremolo.rs  types.rs  vibrato.rs  vocal_doubler.rs  wah.rs
native-bridge/src/mixing/: mixer.rs  mod.rs  track.rs
native-bridge/src/network/: bridge.rs  clock.rs  codec.rs  jitter.rs  manager.rs  mod.rs  osp.rs  p2p.rs  peer.rs  relay.rs
native-bridge/src/protocol/: messages.rs  mod.rs  server.rs
native-bridge/src/tui/: app.rs  mod.rs  ui.rs  widgets.rs
public/audio/: analysis-worker.js  bridge-processor-sab.js  bridge-processor.js  remote-capture-processor.js  worklet-processor.js
scripts/: production-jam-smoke.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/app/achievements/: page.tsx
src/app/admin/: page.tsx
src/app/friends/: page.tsx
src/app/lobby/: page.tsx
src/app/notifications/: page.tsx
src/app/rooms/: page.tsx
src/app/settings/: page.tsx
src/app/stats/: page.tsx
src/components/analysis/: analysis-hud.tsx  index.ts
src/components/audio/: connection-status.tsx  level-meter.tsx  waveform.tsx
src/components/auth/: AuthModal.tsx  AuthProvider.tsx  UserMenu.tsx  index.ts
src/components/avatar/: AvatarCompositor.tsx  AvatarDisplay.tsx  AvatarEditor.tsx  SpriteAvatarEditor.tsx  UserAvatar.tsx  index.ts
src/components/daw/: add-track-modal.tsx  advanced-audio-settings.tsx  ai-panel.tsx  analysis-panel.tsx  arrangement-view.tsx  audio-chat-panel.tsx  avatar-world-view-old.tsx  avatar-world-view.tsx  backing-track-lane.tsx  bottom-dock.tsx  center-split-view.tsx  chat-panel.tsx  daw-layout.tsx  dynamic-waveform.tsx  effects-rack.tsx  fader.tsx  full-height-meter.tsx  guitar-effects-rack.tsx  inactive-track-header.tsx  index.ts  jam-compatibility-indicator.tsx  keyboard-shortcuts.tsx  left-panel.tsx  live-arrangement-view.tsx  live-channels-panel.tsx  live-track-lane.tsx  main-view-switcher.tsx  menu-bar.tsx  (+35 more)
src/data/: achievements.ts
src/hooks/: use-instrument-library.ts  use-loop-library.ts  use-metronome.ts  use-session-tempo-sync.ts  useAudioAnalysis.ts  useAudioEngine.ts  useListenOnly.ts  useLoopPlayback.ts  useLyriaSessionTimer.ts  useMyInvitations.ts  useNativeBridge.ts  usePermissions.ts  useRoom.ts  useRoomInvitations.ts  useRoomPermissions.ts  useStatsTracker.ts  useTempoRealtimeBroadcast.ts  useTrackAudioProcessing.ts  useTrackAudioSync.ts  useTrackPersistence.ts
src/lib/: auth-fetch.ts  native-bridge-access.ts  native-bridge-auth.test.ts  native-bridge-auth.ts  rate-limit.ts  terminable.test.ts  terminable.ts  utils.ts
src/stores/: analysis-store.ts  audio-chat-store.ts  audio-store.ts  auth-store.ts  bridge-audio-store.ts  canvas-store.ts  custom-loops-store.ts  lobby-store.ts  loop-tracks-store.ts  lyria-store.ts  metronome-store.ts  notation-store.ts  performance-sync-store.ts  permissions-store.ts  room-store.ts  saved-tracks-store.ts  session-tempo-store.ts  songs-store.ts  user-tracks-store.ts
src/types/: audio-units.test.ts  audio-units.ts  avatar.ts  essentia.d.ts  index.ts  invitations.ts  loops.ts  permissions.ts  songs.ts  user.ts
supabase/migrations/: 20241227_user_tracks.sql  20241228_add_room_appearance.sql  20241228_add_room_metadata.sql  20241228_avatar_defaults.sql  20241228_user_tracks_ownership.sql  20241229_loop_tracks.sql  20241229_room_permissions.sql  20251228_gamification_base_schema.sql  20251228_gamification_functions.sql  20251228_user_custom_loops.sql  20251229_avatar_canvas.sql  20251229_fix_avatar_canvas_rls.sql  20251229_fix_avatar_urls.sql  20251229_homepage_characters.sql  20251229_room_webrtc_sessions.sql  20251230_fix_xp_rls_policies.sql  20260101_lyria_usage_tracking.sql  20260102_room_invitations.sql  20260102_saved_rooms.sql  20260103_song_notation_room_canvas.sql  20260106_security_fix_grants.sql  20260107_room_webrtc_multitrack_sessions.sql
(+275 files in other folders)
