[package]
name = "openstudio-bridge"
version = "0.1.0"
edition = "2021"
description = "Native audio bridge for OpenStudio - ASIO/CoreAudio low-latency audio"
authors = ["OpenStudio"]
license = "MIT"

[features]
default = []
asio = ["cpal/asio"]

[dependencies]
# Audio I/O - CPAL with optional ASIO support on Windows
cpal = "0.15"

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "net", "sync", "macros", "time", "io-util"] }

# WebSocket server
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Lock-free ring buffer for real-time audio
ringbuf = "0.4"

# URL parsing for protocol handler
url = "2.5"

# Protocol registration (Windows only)
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
