[package]
name = "openstudio-bridge"
version = "0.2.0"
edition = "2021"
description = "Native audio bridge for OpenStudio - ASIO/CoreAudio low-latency audio with P2P networking"
authors = ["OpenStudio"]
license = "MIT"

[features]
default = []
asio = ["cpal/asio"]

[dependencies]
# Audio I/O - CPAL with optional ASIO support on Windows
cpal = "0.15"

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "net", "sync", "macros", "time", "io-util", "io-std"] }

# WebSocket server (for browser communication)
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Lock-free ring buffer for real-time audio
ringbuf = "0.4"

# URL parsing for protocol handler
url = "2.5"

# === NEW: OSP Networking Dependencies ===

# Opus audio codec (low-latency) - requires libopus system library
# Install: macOS `brew install opus`, Linux `apt install libopus-dev`, Windows via vcpkg
opus = "0.3"

# UDP networking
socket2 = "0.5"

# QUIC/WebTransport for MoQ relay
# Note: h3-quinn 0.0.7 requires quinn 0.10.x
quinn = "0.10"
rustls = { version = "0.21", default-features = false, features = ["quic", "dangerous_configuration"] }
rcgen = "0.12"
webpki-roots = "0.25"

# Byte utilities
bytes = "1.5"

# NAT traversal (STUN/TURN)
stun-rs = "0.1"

# Time synchronization
ntp = "0.5"

# Cryptography for peer authentication
blake3 = "1.5"
x25519-dalek = "2.0"
rand = "0.8"

# Concurrent data structures
dashmap = "6.0"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# CRC for packet validation
crc32fast = "1.4"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# === Audio DSP for Effects ===
# realfft - FFT for convolution (cabinet IRs, pitch detection)
realfft = "3.4"

# === TUI Interface ===
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Protocol registration (Windows only)
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
